Fix element alignment

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -21,3 +21,17 @@ li a {
 ul{
     padding: 5px;
 }
+
+.loginEmoji{
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 256px;
+    height: 256px;
+    padding: 32px;
+}
+
+.loginEmojiText {
+    text-align: center;
+    font-size: 24px;
+}
